[package]
name = "truncatable"
version = "0.1.0"
authors = ["lcnr/Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

[dependencies]
num-bigint = { version = "0.2.2", features = ["rand"] }
num-traits = "0.2.4"
num-integer = "0.1"
rand = "0.6"
lazy_static = "1"

[profile.release]
overflow-checks = true